# nexus-agents

./: .env.example  .gitignore  =1.9.0  DUCKDB_MIGRATION.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MONITORING_IMPLEMENTATION.md  README.md  api.py  api_dev.py  docker-compose.yml  example.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py  start.py  test_mcp_connection.py  test_mcp_implementation.py  test_research_workflow.py  test_search_tools.py  test_simple_mcp.py  test_simple_mcp_client.py  test_simple_startup.py  test_single_mcp.py  test_system_initialization.py  test_system_integration.py
config/: llm_config.json  llm_config_ollama.json  mcp_config.json  search_providers.json
docs/: DOK_TAXONOMY_USAGE.md  FRONTEND_DEVELOPMENT.md  api_endpoints.md  data-aggregation.md  database_er_diagram.md
frontend/: index.html
mcp_servers/: exa_server.py  firecrawl_server.py  linkup_server.py  perplexity_server.py  test_server.py
nexus-frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
plans/: monitoring.md
scripts/: cleanup_test_data.py  export_data.py  import_data.py  mock_api_server.py  purge_all_data.py  setup_mcp_servers.sh  start_dev.sh  start_dev_full.sh  start_dev_simple.sh  stop_dev.sh  validate_mcp_setup.py
sql/: 006_add_projects_taxonomy.sql
src/: main.py  mcp_client.py  mcp_client_real.py  mcp_client_simple.py  mcp_config_loader.py  mcp_tool_selector.py  nexus_agents.py  simple_mcp_client.py  worker.py
tests/: run_tests.py  test_agent_spawner.py  (+27 more)
(+130 files in other folders)
