[project]
name = "nexus-agents"
version = "0.1.0"
description = "AI-powered research and analysis agents with MCP server integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis>=4.5.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "duckdb>=0.9.0",
    "neo4j>=5.8.0",
    "playwright>=1.35.0",
    "aiohttp>=3.8.4",
    "langchain>=0.0.200",
    "anthropic>=0.5.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.9.0",
    "mcp-search-linkup",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
]

[tool.uv.sources]
mcp-search-linkup = { git = "https://github.com/LinkupPlatform/python-mcp-server.git" }
